--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,10 @@ description = "A fork of the toml-rs crate (by Alex Crichton) that does not depe
 categories = ["parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+default = ["derive"]
+derive = ["decent-serde-toml-derive-alternative"]
+
 [dependencies]
+decent-serde-toml-derive-alternative = { version = "0.1", optional = true }
